-
Bug
-
Resolution: Fixed
-
P1: Critical
-
None
-
5.15
-
None
This is created to combine all smaller issues found in QTBUG-78849.
These issues are:
- Metalness factor is applied twice to diffuse color making in too dark.
- tangentFrame is not orthogonal after normal mapping.
- frenell has some issues
- Specular lighting doesn't use material color
- Ambient light doesn't use base color
- ect.
- relates to
-
QTBUG-78849 PrincipaledMaterial: Normals/Lighting weird/wrong at 90 degree angles
-
- Closed
-