Fix specular lighting

- Fix applying fresnel
- Apply material color also for specular lighting
- Fix applying material properties and metalness

Task-number: QTBUG-83485
Change-Id: Ie2aaa3be31466725b063418b342c082e7fe2840c
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>